--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
     padding: 0 5px;
     width: 320px;
     height: 75px;
+    /* width: 490px;
+    height: 85px; */
     border: 1px solid blue;
     border-radius: 15px;
     display: flex;
